# echolite

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
client/: Cargo.toml  README.md
client/examples/: client.rs
client/src/: lib.rs
protocol/: Cargo.toml  README.md
protocol/src/: ext.rs  flags.rs  lib.rs
src/: cli.rs  main.rs  sqlite.rs
