[package]
name = "echolite"
edition = "2024"
version = "0.1.0"
publish = false

[workspace]
members = ["client", "protocol"]

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[profile.dev.package.argon2]
opt-level = 3

[dependencies]
zeroize = { version = "1.8.1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
protocol = { path = "./protocol" }
clap = { version = "4.5.40", features = ["derive", "env"] }
rusqlite = { version = "0.36.0", features = ["column_decltype", "bundled"] }
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
] }
