[package]
name = "echolite"
edition = "2024"
version = "0.2.0"
publish = false

[workspace]
members = ["client", "protocol"]

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[profile.dev.package.argon2]
opt-level = 3

[features]
default = ["rusqlite/bundled"]

[dependencies]
zeroize = { version = "1.8.1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
protocol = { path = "./protocol" }
clap = { version = "4.5.40", features = ["derive", "env"] }
rusqlite = { version = "0.37.0", features = ["column_decltype"] }
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
] }
