[package]
name = "echolite"
edition = "2024"
version = "0.2.2"
publish = false

[workspace]
members = ["client", "protocol"]

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[profile.dev.package.argon2]
opt-level = 3

[features]
default = ["rusqlite/bundled"]

[dependencies]
zeroize = { version = "1.8.2", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
thiserror = "2.0.17"
protocol = { path = "./protocol" }
clap = { version = "4.5.48", features = ["derive", "env"] }
rusqlite = { version = "0.38.0", features = ["column_decltype"] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
] }
